# vodomat_api

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: security.py
app/api/v1/endpoints/: avtomat.py  city.py  issue.py  order.py  order_app.py  order_portmone.py  statistic.py  status.py
app/api/v1/schemas/: __init__.py  avtomat.py  collection.py  order.py  order_app.py  order_server.py  security.py  statistic.py  status.py
app/api/v1/services/: avtomat.py  base.py  city.py  issue.py  order.py  order_app.py  order_pay_gate.py  order_server.py  status.py  street.py  user.py
app/core/: config.py  logger.py
app/db/: __init__.py  databases.py  redis.py
app/models/: __init__.py  issue.py  order.py  order_app.py  order_pay_gate.py  order_server.py  server.py  statistic.py  user.py
src/: main.py  models.py  requirements.txt  security.py
src/api/: __init__.py  avtomat.py  city.py  issue.py  order.py  order_app.py  order_portmone.py  order_server.py  source.py  statistic.py  status.py  street.py
src/api/v1/: __init__.py  security.py
src/api/v1/endpoints/: avtomat.py  order.py  street.py  (+1 more)
src/api/v3/: status.py
src/core/: config.py
src/db/: __init__.py  database.py  databases.py  redis.py
src/models/: __init__.py  avtomat.py  base.py  city.py  issue.py  order.py  order_server.py  route.py  status.py  street.py  user.py
src/schemas/: __init__.py  avtomat.py  city.py  request_params.py  route.py  security.py  status.py  street.py
src/services/: __init__.py  avtomat.py  base.py  city.py  issue.py  order.py  order_app.py  order_pay_gate.py  order_server.py  statistic.py  status.py  street.py  user.py
(+23 files in other folders)
