[project]
name = "vodomat-api"
version = "1.0.0"
description = "Vodomat API"
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = [
    "aiohttp==3.9.3",
    "aiomysql==0.2.0",
    "aioredis==2.0.1",
    "aiosignal==1.3.1",
    "annotated-types==0.6.0",
    "anyio==4.3.0",
    "async-timeout==4.0.3",
    "attrs==23.2.0",
    "bcrypt==4.1.2",
    "certifi==2024.8.30",
    "cffi==1.16.0",
    "click==8.1.7",
    "cryptography==42.0.3",
    "dnspython==2.6.1",
    "ecdsa==0.18.0",
    "email-validator==2.1.0.post1",
    "fastapi==0.115.6",
    "fastapi-cli==0.0.6",
    "frozenlist==1.4.1",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.6",
    "jinja2==3.1.4",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "multidict==6.0.5",
    "numpy==1.26.4",
    "orjson==3.9.14",
    "pandas==2.2.0",
    "passlib==1.7.4",
    "pyasn1==0.5.1",
    "pycparser==2.21",
    "pydantic==2.6.1",
    "pydantic-core==2.16.2",
    "pygments==2.18.0",
    "pymysql==1.1.0",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.1",
    "python-jose==3.3.0",
    "python-multipart==0.0.9",
    "pytz==2024.1",
    "pyyaml==6.0.2",
    "rich==13.9.4",
    "rich-toolkit==0.12.0",
    "rsa==4.9",
    "shellingham==1.5.4",
    "six==1.16.0",
    "sniffio==1.3.0",
    "sqlalchemy==2.0.27",
    "starlette==0.41.3",
    "typer==0.15.1",
    "typing-extensions==4.12.2",
    "tzdata==2024.1",
    "uvicorn==0.27.1",
    "uvloop==0.21.0",
    "watchfiles==1.0.3",
    "websockets==14.1",
    "yarl==1.9.4",
]
